--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -33,6 +33,12 @@ div.Bonsai_tree_gallery {
 	height: auto;
 }
 
+div.tree_name {
+	text-align: center;
+	position: relative;
+	font:1em Helvetica, Arial, sans-serif;
+}
+
 #container {
 	margin: 0 auto;
 	width:920px;
@@ -57,11 +63,11 @@ div.Bonsai_tree_gallery {
 }
 
 .cols3 .col {
-	width:25%;
+	width:24%;
 }
 
 .cols5 .col {
-	width:50%;
+	width:54%;
 }
 
 .cols .first {
