Adding shopping cart to all pages!

--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -15,6 +15,14 @@ position: relative;
 	top: 50px;
 }
 
+div.shop_cart{
+	position:relative;
+	float:right;
+	right: 220px;
+	top: -70px;
+}
+
+
 div.Couple_Photo{
 	position: relative;
 	left:200px;
