--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -22,6 +22,13 @@ div.shop_cart{
 	top: -70px;
 }
 
+h1 {
+	position: relative;
+	left:45px;
+	top: 75px;
+	font:1.2em Helvetica, Arial, sans-serif;
+}
+
 
 div.Couple_Photo{
 	position: relative;
