--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@ div.Bonsai_tree_gallery {
 	height: auto;
 }
 
+h1 {
+	position: relative;
+	left:45px;
+	top: 75px;
+	font:1.2em Helvetica, Arial, sans-serif;
+}
+
 div.shop_cart{
 	position:relative;
 	float:right;
