--- a/style.css
+++ b/style.css
@@ -57,6 +57,12 @@ div.Continue_shop{
 	top:14px;
 }
 
+div.add_item{
+	position:relative;
+	float:right;
+	top:-24px;
+}
+
 div.Checkout{
 	position:relative;
 	float: right;
