--- a/tablet.css
+++ b/tablet.css
@@ -2,13 +2,64 @@ div.MenuButtonPos {
 	position: relative;
 	float:left;
 	margin:-5px;
-
+	top:50px;
 }
-
 
 .cols .first {
 	position: relative;
 	left: 50px;
-	top: 140px;
+	top: 80px;
 	padding: 20px;
+}
+
+div.Couple_Photo{
+	position: relative;
+	top:-290px;
+	left:320px;
+}
+
+div.Logo {
+position: relative;
+	left:30px;
+	top: 20px;
+}
+
+img.logo{
+width:30%;
+height:30%
+}
+
+div.shop_cart{
+	position:relative;
+	float:right;
+	right: 230px;
+	top: -50px;
+}
+
+div.AboutBodyText {
+	position: relative;
+	width: 280px;
+	font:1em Helvetica, Arial, sans-serif;
+	
+}
+
+div.Continue_shop{
+	position:relative;
+	float: left;
+	top:-90px;
+	left:170px;
+}
+
+div.add_item{
+	position:relative;
+	float:right;
+	top:-90px;
+}
+
+div.ProductText {
+	font:1em Helvetica, Arial, sans-serif;
+	position: relative;
+	float: left;
+	left: 180px;
+	top: -260px;
 }
