mobile response - Only works in firefox : /

--- a/Shop.css
+++ b/Shop.css
@@ -52,7 +52,7 @@ div.table{
 	font:1em Helvetica, Arial, sans-serif;
 }
 
-div.Continue_shop{
+div.Continue_shop2{
 	position:relative;
 	float: left;
 	top:14px;
