--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,9 @@
+a, img {
+    border:none;
+}
+
 div.MenuButtonPos {
 	position: relative;
-	float:center;
 	margin:-3px;
 }
 
@@ -18,7 +21,7 @@ img.button {
 
 div.Logo {
 	position: relative;
-	float: center;
+	float: left;
 	/*left: 30px;
 	top: 20px;*/
 }
@@ -83,5 +86,5 @@ div.ProductText {
 	/*left: 50px;
 	top: 140px;*/
 	padding: 20px;
-	float:center;
+	/*float:center;*/
 }
