Made a form for checkout process, changed a couple of buttons, tweaked the positioning of grey box

--- a/Shop.css
+++ b/Shop.css
@@ -22,8 +22,7 @@ div.Couple_Photo{
 
 div.BodyText {
 	position: relative;
-	font:1em Helvetica, Arial, sans-serif;
-	
+	font: 1em 'Quicksand', sans-serif;	
 }
 
 
@@ -41,7 +40,7 @@ div.product_photo {
 }
 
 div.ProductText {
-	font:1em Helvetica, Arial, sans-serif;
+	font: 1em 'Quicksand', sans-serif;
 	position: relative;
 	float: left;
 	left: 180px;
@@ -49,7 +48,7 @@ div.ProductText {
 }
 
 div.table{
-	font:1em Helvetica, Arial, sans-serif;
+	font: 1em 'Quicksand', sans-serif;
 }
 
 div.Continue_shop2{
@@ -65,7 +64,7 @@ div.Checkout{
 }
 
 h1 {
-	font:1.5em Helvetica, Arial, sans-serif;
+	font: 1.5em 'Quicksand', sans-serif;
 }
 
 div.shop_cart{
