--- a/mobile.css
+++ b/mobile.css
@@ -74,7 +74,7 @@ div.product_photo {
 
 
 div.ProductText {
-	font:1em Helvetica, Arial, sans-serif;
+	font: 1em 'Quicksand', sans-serif;
 	position: relative;
 	float: left;
 	left: 2px;
