--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -67,7 +67,7 @@ div.tree_name {
 	/*overflow:hidden;*/
 }
 
-.col, .col2, .col3, .col4, .col5 {
+.col, .col5 {
 	float:left;
 	display:inline;
 	margin-left:2%;
@@ -78,12 +78,8 @@ div.tree_name {
 	width:20%;
 }
 
-.cols3 .col {
-	width:20%;
-}
-
 .cols5 .col {
-	width:60%;  /*25, 24, 54 */
+	width:60%; 
 }
 
 .cols .first {
