--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ div.shop_cart{
 	/*overflow:hidden;*/
 }
 
-.col, .col2, .col3, .col4, .col5 {
+.col, .col5 {
 	float:left;
 	display:inline;
 	margin-left:2%;
@@ -132,10 +132,6 @@ div.shop_cart{
 }
 
 .col {
-	width:20%;
-}
-
-.cols3 .col {
 	width:20%;
 }
 
