--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -48,10 +48,11 @@ div.Bonsai_tree_gallery {
 
 div.tree_name {
 	text-align: center;
-	left:20px;
+	left:0px;
 	position: relative;
 	font: 1em 'Quicksand', sans-serif;
-	width:120px;
+	height: 50px;
+	width:150px;
 	
 }
 
