Adding Gallery Page

--- a/Shop.css
+++ b/Shop.css
@@ -1,5 +1,15 @@
+a, img {
+    border:none;
+}
+
 div.MenuButton {
 	
+}
+
+body{
+	background-image:url('images/Background.jpg'); /*photo credit: https://farm4.staticflickr.com/3086/2734229524_829275c502_o.jpg */
+	background-repeat:no-repeat;
+	background-attachment:fixed;
 }
 
 div.MenuButtonPos {
@@ -85,6 +95,7 @@ div.shop_cart{
 	margin: 0 auto;
 	width:920px;
 	height:1000px;
+	background-color:white;
 	text-align:left;
 	position:relative;
 }
@@ -112,6 +123,6 @@ div.shop_cart{
 .cols .first {
 	position: relative;
 	left: 200px;
-	top: -135px;
+	top: -188px;
 	padding: 20px;
 }
