--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -1,5 +1,15 @@
+a, img {
+    border:none;
+}
+
 div.MenuButton {
 	
+}
+
+body{
+	background-image:url('images/Background.jpg'); /*photo credit: https://farm4.staticflickr.com/3086/2734229524_829275c502_o.jpg */
+	background-repeat:no-repeat;
+	background-attachment:fixed;
 }
 
 div.MenuButtonPos {
@@ -59,6 +69,8 @@ div.tree_name {
 #container {
 	margin: 0 auto;
 	width:920px;
+	height:1000px;
+	background-color:white;
 	text-align:left;
 	position:relative;
 }
@@ -86,6 +98,6 @@ div.tree_name {
 .cols .first {
 	position: relative;
 	left: 200px;
-	top: -135px;
+	top: -188px;
 	padding: 20px;
 }
