--- a/mobile.css
+++ b/mobile.css
@@ -2,6 +2,11 @@ a, img {
     border:none;
 }
 
+body{
+	background-image:none;
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+}
 div.MenuButtonPos {
 	position: relative;
 	margin:4px;
