--- a/tablet.css
+++ b/tablet.css
@@ -2,6 +2,12 @@ a, img {
     border:none;
 }
 
+body{
+	background-image:none;
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+}
+
 div.MenuButtonPos {
 	position: relative;
 	float:left;
