--- a/Shop.css
+++ b/Shop.css
@@ -2,6 +2,19 @@ a, img {
     border:none;
 }
 
+@font-face {
+    font-family: 'QuicksandLight';
+    src: url('Font/Quicksand_Light-webfont.eot');
+    src: url('Font/Quicksand_Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Font/Quicksand_Light-webfont.woff') format('woff'),
+         url('Font/Quicksand_Light-webfont.ttf') format('truetype'),
+         url('Font/Quicksand_Light-webfont.svg#QuicksandLight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 div.MenuButton {
 	
 }
@@ -12,31 +25,31 @@ body{
 	background-attachment:fixed;
 }
 
-div.MenuButtonPos {
+div.MenuButtonPos {	/*positioning menu buttons*/
 	position: relative;
 	left:50px;
 	top: 100px;
 	margin:-5px;
 }
 
-div.Logo {
+div.Logo {	/*positioning logos*/
 position: relative;
 	left:50px;
 	top: 50px;
 }
 
-div.Couple_Photo{
+div.Couple_Photo{	/*positioning couple's photo on About page*/
 	position: relative;
 	left:0px;
 }
 
-div.BodyText {
+div.BodyText {	/*positioning body text*/
 	position: relative;
 	font: 1em 'Quicksand', sans-serif;	
 }
 
 
-div.Bonsai_tree_gallery {
+div.Bonsai_tree_gallery { /*positioning images in product page gallery*/
 	margin:5px;
 	float:left;
 	width: auto;
@@ -48,13 +61,13 @@ th, td {
 }
 
 
-div.product_photo {
+div.product_photo {		/*positioning photo in individual product page*/
 	position: relative;
 	float:left;
 	left:10px;
 }
 
-div.ProductText {
+div.ProductText {		/*positioning text on individual product page*/
 	font: 1em 'Quicksand', sans-serif;
 	position: relative;
 	float: left;
@@ -62,17 +75,17 @@ div.ProductText {
 	top: -220px;
 }
 
-div.table{
+div.table{		/*Mock table showing purchases*/
 	font: 1em 'Quicksand', sans-serif;
 }
 
-div.Continue_shop2{
+div.Continue_shop2{	/*repositioning continue shopping button*/
 	position:relative;
 	float: left;
 	top:14px;
 }
 
-div.Checkout{
+div.Checkout{		/*Continue to checkout button*/
 	position:relative;
 	float: right;
 	top:14px;
@@ -83,7 +96,7 @@ h1 {
 	font: 1.5em 'Quicksand', sans-serif;
 }
 
-div.shop_cart{
+div.shop_cart{		/*positioning shopping cart icon*/
 	position:relative;
 	float:right;
 	right: 110px;
