--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@ a, img {
     border:none;
 }
 
+@font-face {
+    font-family: 'QuicksandLight';
+    src: url('Font/Quicksand_Light-webfont.eot');
+    src: url('Font/Quicksand_Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Font/Quicksand_Light-webfont.woff') format('woff'),
+         url('Font/Quicksand_Light-webfont.ttf') format('truetype'),
+         url('Font/Quicksand_Light-webfont.svg#QuicksandLight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body{
 	background-image:url('images/Background.jpg'); /*photo credit: https://farm4.staticflickr.com/3086/2734229524_829275c502_o.jpg */
 	background-repeat:no-repeat;
@@ -12,48 +24,48 @@ div.MenuButton {
 	
 }
 
-div.MenuButtonPos {
+div.MenuButtonPos {		/*positioning menu buttons*/
 	position: relative;
 	left:50px;
 	top: 100px;
 	margin:-5px;
 }
 
-div.Logo {
+div.Logo {		/*positioning logo*/
 position: relative;
 	left:50px;
 	top: 50px;
 }
 
-div.infograph1{
+div.infograph1{	/*positioning watering infograph*/
 	position: relative;
 	float:left;
 	top:10px;
 }
 
-div.infograph2{
+div.infograph2{	/*positioning trimming infograph*/
 	position: relative;
 	float: right;
 	top:10px;
 }
 
-div.Couple_Photo{
+div.Couple_Photo{	/*positioning Couple's photo on About page*/
 	position: relative;
 	left:0px;
 }
 
-div.gallery_photo{
+div.gallery_photo{	/*laying out gallery photos*/
 	margin: 0px;
 	position:relative;
 	left:8%;
 }
 
-div.gallery_photo_pos{
+div.gallery_photo_pos{	/*individual gallery photo positioning*/
 	margin: 10px;
 	float:left;
 }
 
-div.uploader{
+div.uploader{		/*text showing who uploaded which gallery photo*/
 	text-align: center;												
 	position: relative;
 	font: 1em 'Quicksand', sans-serif;
@@ -61,33 +73,33 @@ div.uploader{
 	width:	200px;
 }
 
-div.BodyText {
+div.BodyText {	/*body text in all pages*/
 	position: relative;
 	font: 1em 'Quicksand', sans-serif;
 	
 }
 
-div.AboutBodyText {
+div.AboutBodyText {	/*body text in About page*/
 	position: relative;
 	font: 1em 'Quicksand', sans-serif;
 }
 
 
-div.Bonsai_tree_gallery {
+div.Bonsai_tree_gallery {	/*positioning photos in product page*/
 	margin:5px;
 	float:left;
 	width: auto;
 	height: auto;
 }
 
-div.product_photo {
+div.product_photo {		/*positioning product photo in individual product page*/
 	margin: 0;
 	position: relative;
 	float:left;
 	left:10px;
 }
 
-div.ProductText {
+div.ProductText {		/*positioning text in individual product page*/
 	font: 1em 'Quicksand', sans-serif;
 	position: relative;
 	float: left;
@@ -95,31 +107,31 @@ div.ProductText {
 	top: -260px;
 }
 
-div.table{
+div.table{			/*mock table showing someone's purchases*/
 	font: 1em 'Quicksand', sans-serif;
 }
 
-div.Continue_shop{
+div.Continue_shop{	/*continue shopping button*/
 	position:relative;
 	float: left;
 	top:-50px;
 	left:170px;
 }
 
-div.Continue_shop_checkout{
+div.Continue_shop_checkout{	/*continue shopping button positioned specifically for Checkout page*/
 	position:relative;
 	float: left;
 	top:14px;
 	left:-10px;
 }
 
-div.add_item{
+div.add_item{	/*add item button*/
 	position:relative;
 	float:right;
 	top:-50px;
 }
 
-div.Checkout{
+div.Checkout{	/*go to checkout page*/
 	position:relative;
 	float: right;
 	top:14px;
@@ -130,7 +142,7 @@ h1 {
 	font: 1.5em 'Quicksand', sans-serif;
 }
 
-div.shop_cart{
+div.shop_cart{	/*positioning shopping cart icon*/
 	position:relative;
 	float:right;
 	right: 110px;
