--- a/tablet.css
+++ b/tablet.css
@@ -2,13 +2,26 @@ a, img {
     border:none;
 }
 
+@font-face {
+    font-family: 'QuicksandLight';
+    src: url('Font/Quicksand_Light-webfont.eot');
+    src: url('Font/Quicksand_Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Font/Quicksand_Light-webfont.woff') format('woff'),
+         url('Font/Quicksand_Light-webfont.ttf') format('truetype'),
+         url('Font/Quicksand_Light-webfont.svg#QuicksandLight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 body{
 	background-image:none;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 }
 
-div.MenuButtonPos {
+div.MenuButtonPos {		/*positioning menu buttons*/
 	position: relative;
 	float:left;
 	margin:-5px;
@@ -22,58 +35,58 @@ div.MenuButtonPos {
 	padding: 20px;
 }
 
-div.Couple_Photo{
+div.Couple_Photo{		/*Couple's photo on About page*/
 	position: relative;
 	top:-290px;
 	left:320px;
 }
 
-div.Logo {
-position: relative;
+div.Logo {				/*Logo positioning*/
+	position: relative;
 	left:30px;
 	top: 20px;
 }
 
-img.logo{
+img.logo{				/*resizing logo for Tablet size*/
 width:30%;
 height:30%
 }
 
-div.shop_cart{
+div.shop_cart{			/*positioning Shopping Cart icon*/
 	position:relative;
 	float:right;
 	right: 230px;
 	top: -50px;
 }
 
-div.AboutBodyText {
+div.AboutBodyText {		/*positioning text in About page*/
 	position: relative;
 	width: 280px;
 	font: 1em 'Quicksand', sans-serif;
 	
 }
 
-div.Continue_shop{
+div.Continue_shop{		/*positioning "Continue shopping" button*/
 	position:relative;
 	float: left;
 	top:-90px;
 	left:170px;
 }
 
-div.Continue_shop_checkout{
+div.Continue_shop_checkout{	/*positioning "Continue shopping" button on Checkout page*/
 	position:relative;
 	float: left;
 	top:14px;
 	left:-10px;
 }
 
-div.add_item{
+div.add_item{				/*positioning "Add to Cart" button*/
 	position:relative;
 	float:right;
 	top:-90px;
 }
 
-div.ProductText {
+div.ProductText {			/*Text for individual product page*/
 	font: 1em 'Quicksand', sans-serif;
 	position: relative;
 	float: left;
