--- a/mobile.css
+++ b/mobile.css
@@ -20,9 +20,11 @@ body{
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 }
+
 div.MenuButtonPos {
 	position: relative;
-	margin:4px;
+	margin:2px;
+	margin-top: -2px;
 }
 
 img.button {
@@ -40,8 +42,7 @@ img.button {
 div.Logo {	/*positioning logo*/
 	position: relative;
 	float: left;
-	/*left: 30px;
-	top: 20px;*/
+	left: 10px;
 }
 
 div.infograph1{	/*positioning watering infograph on FAQ page*/
@@ -61,7 +62,7 @@ div.infograph2{		/*positioning trimming infograph on FAQ page*/
 div.shop_cart{		/*positioning shopping cart*/
 	position:relative;
 	float:right;
-	right: 30px;
+	right: 50px;
 	top: 20px;
 }
 
@@ -76,11 +77,11 @@ div.Couple_Photo{	/*couple's photo on About page*/
 	left:30px;
 }
 
-div.add_item{	/*add item button*/
+div.add_item{	/*add item button on individual product page*/
 	position:relative;
-	float:right;
-	right: -14px;
-	top:-250px;
+	float:left;
+	left: 7px;
+	top:-200px;
 }
 
 div.Continue_shop{ /*continue shopping button for individual product page*/
@@ -119,6 +120,7 @@ div.ProductText {		/*Text for individual product page*/
 	float: left;
 	left: 2px;
 	top: -50px;
+	width:300px;
 }
 
 .cols .first {
