--- a/Shop.css
+++ b/Shop.css
@@ -108,7 +108,7 @@ div.shop_cart{		/*positioning shopping cart icon*/
 	margin: 0 auto;
 	width:920px;
 	height:1000px;
-	background-color:white;
+	background-color: rgba(255, 255, 255, 0.75);
 	text-align:left;
 	position:relative;
 }
