--- a/Testing_buttons_style.css
+++ b/Testing_buttons_style.css
@@ -20,6 +20,54 @@ body{
 	background-attachment:fixed;
 }
 
+div.button_list{
+	width:50px;
+}
+
+nav ul {
+	margin-left:0;
+}
+
+nav ul li {
+	position:relative;
+	top:6em;
+	margin:10px;
+	display: block;
+	list-style: none;
+	margin-right:0.5em;
+	font-family:'Quicksand', sans-serif;
+	height:40px;
+
+}
+
+a.menuButton {
+	text-align:center;
+	background-color:#559653;
+	/*border-radius:.5em;*/
+	height:26px;
+	color:white;
+	/*border-color:black;*/
+	font-size:20px;
+	text-decoration:none;
+	padding:.5em .95em;
+	/*border:solid 1px black;*/
+	/*box-shadow: 2px 2px 1px black;*/
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
+a.menuButton:hover {
+	text-decoration:none;
+	background-color:white;
+	color:black;
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
 a, a:visited { /* anchor links colour */
 	color:#22B573;
 	text-decoration: none;
@@ -192,7 +240,7 @@ div.shop_cart{	/*positioning shopping cart icon*/
 .cols .first {
 	position: relative;
 	left: 200px;
-	top: -188px;
+	top: -155px;
 	padding: 20px;
 }
 
