--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -70,7 +70,7 @@ div.tree_name {
 	margin: 0 auto;
 	width:920px;
 	height:1000px;
-	background-color:white;
+	background-color: rgba(255, 255, 255, 0.75);
 	text-align:left;
 	position:relative;
 }
