--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -12,6 +12,49 @@ body{
 	background-attachment:fixed;
 }
 
+div.buttons	{
+	position:relative;
+	top:4em;
+	left:1em;
+	font-family:'Quicksand', Arial, sans-serif;
+	color:white;
+	width:150px;
+}
+
+a.menuButton {
+	display:block;
+	margin:10px;
+	text-align:center;
+	background-color:#21B573;
+	/*border-radius:.5em;*/
+	height:26px;
+	color:white;
+	/*border-color:black;*/
+	font-size:20px;
+	text-decoration:none;
+	padding:.5em .95em;
+	/*border:solid 1px black;*/
+	/*box-shadow: 2px 2px 1px black;*/
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
+a.menuButton:hover {
+	text-decoration:none;
+	background-color:white;
+	color:black;
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
+.menuButton:active{
+	color:#507A46;
+}
+
 div.MenuButtonPos {
 	position: relative;
 	left:50px;
@@ -98,6 +141,6 @@ div.tree_name {
 .cols .first {
 	position: relative;
 	left: 200px;
-	top: -188px;
+	top: -17em;
 	padding: 20px;
 }
