--- a/style.css
+++ b/style.css
@@ -20,15 +20,77 @@ body{
 	background-attachment:fixed;
 }
 
-a, a:visited { /* anchor links colour */
+
+
+/*nav ul {
+	margin-left:0;
+}
+
+nav ul li {
+	display: block;
+	position:relative;
+	top:6em;
+	margin:10px;
+	width:100px;
+	list-style: none;
+	margin-right:0.5em;
+	font-family:'Quicksand', sans-serif;
+	height:40px;
+
+}*/
+
+div.buttons	{
+	position:relative;
+	top:4em;
+	left:1em;
+	font-family:'Quicksand', Arial, sans-serif;
+	color:white;
+	width:150px;
+}
+
+a.menuButton {
+	display:block;
+	margin:10px;
+	text-align:center;
+	background-color:#21B573;
+	/*border-radius:.5em;*/
+	height:26px;
+	color:white;
+	/*border-color:black;*/
+	font-size:20px;
+	text-decoration:none;
+	padding:.5em .95em;
+	/*border:solid 1px black;*/
+	/*box-shadow: 2px 2px 1px black;*/
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
+a.menuButton:hover {
+	text-decoration:none;
+	background-color:white;
+	color:black;
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
+.menuButton:active{
+	color:#507A46;
+}
+
+/*a, a:visited { /* anchor links colour 
 	color:#22B573;
 	text-decoration: none;
 }
 
-a:hover { /* anchor links when hovered */
+a:hover { /* anchor links when hovered 
 	color: #22B573;
 	text-decoration: underline;
-}
+}*/
 
 div.MenuButton {
 	
@@ -192,7 +254,7 @@ div.shop_cart{	/*positioning shopping cart icon*/
 .cols .first {
 	position: relative;
 	left: 200px;
-	top: -188px;
+	top: -17em;
 	padding: 20px;
 }
 
