--- a/tablet.css
+++ b/tablet.css
@@ -21,13 +21,61 @@ body{
 	background-attachment:fixed;
 }
 
-div.MenuButtonPos {		/*positioning menu buttons*/
+nav ul li {
+	display:inline;
+	margin: 0 auto;
+}
+
+/*div.buttons	{
+	top:1.5em;
+	left:1em;
+	font-family:'Quicksand', Arial, sans-serif;
+	color:white;
+	width:175px;
+}*/
+
+
+
+a.menuButton {
+	text-align: center;
+	margin:-2px;
+	background-color:#21B573;
+	/*border-radius:.5em;*/
+	height:26px;
+	color:white;
+	/*border-color:black;*/
+	font-size:20px;
+	text-decoration:none;
+	padding:.7em 1.5em;
+	/*border:solid 1px black;*/
+	/*box-shadow: 2px 2px 1px black;*/
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
+a.menuButton:hover {
+	text-decoration:none;
+	background-color:white;
+	color:black;
+	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
+    -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+    -o-transition: background-color 2s, color 2s;
+    transition: background-color 2s, color 2s;
+}
+
+a.menuButton:active{
+	color:#507A46;
+}
+
+/*div.MenuButtonPos {		/*positioning menu buttons
 	position: relative;
 	float:left;
 	left: 10px;
 	margin:-5px;
 	top:50px;
-}
+}*/
 
 .cols .first {
 	position: relative;
