--- a/style.css
+++ b/style.css
@@ -39,24 +39,28 @@ nav ul li {
 
 }*/
 
-div.buttons	{
-	position:relative;
-	top:4em;
-	left:1em;
-	font-family:'Quicksand', Arial, sans-serif;
-	color:white;
-	width:150px;
+nav ul {
+	margin-left:0;
 }
 
-a.menuButton {
+nav ul li {
+	position:relative;
+	top:4em;
 	display:block;
-	margin:10px;
+	list-style: none;
+	font-family:'Quicksand', sans-serif;
+	margin-left:0.5em;
+	height:50px;
+}
+
+
+a.menuButton {
 	text-align:center;
-	background-color:#21B573;
+	/*background-color:#209653;
 	/*border-radius:.5em;*/
 	height:26px;
-	color:white;
-	/*border-color:black;*/
+	color:#209653;
+	border-color:black;*/
 	font-size:20px;
 	text-decoration:none;
 	padding:.5em .95em;
@@ -70,16 +74,16 @@ a.menuButton {
 
 a.menuButton:hover {
 	text-decoration:none;
-	background-color:white;
-	color:black;
+	background-color:#209653;
+	color:white;
 	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
     -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
     -o-transition: background-color 2s, color 2s;
     transition: background-color 2s, color 2s;
 }
 
-.menuButton:active{
-	color:#507A46;
+a:active{
+	text-decoration:underline;
 }
 
 /*a, a:visited { /* anchor links colour 
@@ -254,7 +258,7 @@ div.shop_cart{	/*positioning shopping cart icon*/
 .cols .first {
 	position: relative;
 	left: 200px;
-	top: -17em;
+	top: -16em;
 	padding: 20px;
 }
 
