--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -2,8 +2,16 @@ a, img {
     border:none;
 }
 
-div.MenuButton {
-	
+@font-face {
+    font-family: 'QuicksandBold';
+    src: url('Quicksand_Bold-webfont.eot');
+    src: url('Quicksand_Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Quicksand_Bold-webfont.woff') format('woff'),
+         url('Quicksand_Bold-webfont.ttf') format('truetype'),
+         url('Quicksand_Bold-webfont.svg#QuicksandBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 body{
@@ -21,7 +29,7 @@ nav ul li {
 	top:4em;
 	display:block;
 	list-style: none;
-	font-family:'Quicksand', sans-serif;
+	font-family:'QuicksandBold', sans-serif;
 	margin-left:0.5em;
 	height:50px;
 }
