--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ a, img {
 
 }
 
+@font-face {
+    font-family: 'QuicksandBold';
+    src: url('Quicksand_Bold-webfont.eot');
+    src: url('Quicksand_Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Quicksand_Bold-webfont.woff') format('woff'),
+         url('Quicksand_Bold-webfont.ttf') format('truetype'),
+         url('Quicksand_Bold-webfont.svg#QuicksandBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body{
 	background-image:url('images/Background.jpg'); /*photo credit: https://farm4.staticflickr.com/3086/2734229524_829275c502_o.jpg */
 	background-repeat:no-repeat;
@@ -48,7 +60,7 @@ nav ul li {
 	top:4em;
 	display:block;
 	list-style: none;
-	font-family:'Quicksand', sans-serif;
+	font-family:'QuicksandBold', sans-serif;
 	margin-left:0.5em;
 	height:50px;
 }
@@ -230,7 +242,7 @@ div.shop_cart{	/*positioning shopping cart icon*/
 	margin: 0 auto;
 	width:920px;
 	height:1000px;
-	background-color: rgba(255, 255, 255, 0.75);
+	background-color: rgba(255, 255, 255, 0.85);
 	text-align:left;
 	position:relative;
 }
