--- a/style.css
+++ b/style.css
@@ -4,12 +4,18 @@ a, img {
 
 a:link{
 	text-decoration:none;
-	color:black;
+	color:#488A36;
 }
+
 
 a:visited{
 	text-decoration:none;
-	color:blue;
+	color:#6BB557;
+}
+
+a:hover{
+	text-decoration:none;
+	color:black;
 }
 
 @font-face {
@@ -118,8 +124,10 @@ a:hover { /* anchor links when hovered
 	text-decoration: underline;
 }*/
 
-div.MenuButton {
-	
+div.upload_button {
+	position:relative;
+	left:220px;
+	top:215px;
 }
 
 div.MenuButtonPos {		/*positioning menu buttons*/
