stressing over mobile

--- a/mobile.css
+++ b/mobile.css
@@ -4,19 +4,34 @@ a, img {
 
 a:link{
 	text-decoration:none;
-	color:#488A36;
+	color:#156B00;
 }
 
 
 a:visited{
 	text-decoration:none;
-	color:#6BB557;
+	color:#0F4D00;
 }
 
 a:hover{
 	text-decoration:none;
 	color:black;
 }
+
+div.BodyText {	/*body text in all pages*/
+	position: relative;
+	font: 1.5em 'Quicksand', sans-serif;	
+}
+
+div.AboutBodyText {	/*body text in About page*/
+	position: relative;
+	font: 1.5em 'Quicksand', sans-serif;
+}
+
+div.uploader{
+	font: 1.2em 'Quicksand', sans-serif;
+}
+
 
 div.upload_button {
 	position:relative;
@@ -172,7 +187,7 @@ div.product_photo { /*photo for individual product page*/
 
 
 div.ProductText {		/*Text for individual product page*/
-	font: 1em 'Quicksand', sans-serif;
+	font: 1.4em 'Quicksand', sans-serif;
 	position: relative;
 	float: left;
 	left: 2px;
