--- a/tablet.css
+++ b/tablet.css
@@ -4,18 +4,32 @@ a, img {
 
 a:link{
 	text-decoration:none;
-	color:#488A36;
+	color:#156B00;
 }
 
 
 a:visited{
 	text-decoration:none;
-	color:#6BB557;
+	color:#0F4D00;
 }
 
 a:hover{
 	text-decoration:none;
-	color:black;
+	color:black;	
+}
+
+div.BodyText {	/*body text in all pages*/
+	position: relative;
+	font: 1.2em 'Quicksand', sans-serif;	
+}
+
+div.AboutBodyText {	/*body text in About page*/
+	position: relative;
+	font: 1.2em 'Quicksand', sans-serif;
+}
+
+div.uploader{
+	font: 1.1em 'Quicksand', sans-serif;
 }
 
 div.upload_button {
@@ -139,7 +153,7 @@ div.AboutBodyText {		/*positioning text in About page*/
 div.Continue_shop{		/*positioning "Continue shopping" button*/
 	position:relative;
 	float: left;
-	top:-90px;
+	top:-50px;
 	left:170px;
 }
 
@@ -153,11 +167,11 @@ div.Continue_shop_checkout{	/*positioning "Continue shopping" button on Checkout
 div.add_item{				/*positioning "Add to Cart" button*/
 	position:relative;
 	float:right;
-	top:-90px;
+	top:-50px;
 }
 
 div.ProductText {			/*Text for individual product page*/
-	font: 1em 'Quicksand', sans-serif;
+	font: 1.1em 'Quicksand', sans-serif;
 	position: relative;
 	float: left;
 	left: 180px;
