--- a/bonsai_style.css
+++ b/bonsai_style.css
@@ -56,7 +56,7 @@ a.menuButton {
 	/*border-radius:.5em;*/
 	height:26px;
 	color:#209653;
-	border-color:black;*/
+	/*border-color:black;*/
 	font-size:20px;
 	text-decoration:none;
 	padding:.5em .95em;
