--- a/mobile.css
+++ b/mobile.css
@@ -60,21 +60,21 @@ body{
 
 nav ul li {
 	display:inline-block;
-	margin: 0 auto;
-	
+	width:150px;
 }
+
+
 
 a.menuButton {
 	text-align: center;
-	margin:-2px;
 	background-color:#21B573;
 	/*border-radius:.5em;*/
-	height:26px;
+	float:left;
 	color:white;
 	/*border-color:black;*/
 	font-size:18px;
 	text-decoration:none;
-	padding:.9em 2.5em;
+	/*padding:.7em 2.5em;*/
 	/*border:solid 1px black;*/
 	/*box-shadow: 2px 2px 1px black;*/
 	-moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
