--- a/style.css
+++ b/style.css
@@ -82,14 +82,18 @@ nav ul li {
 }
 
 
+
+
 a.menuButton {
 	text-align:center;
+	width:150px;
+	border-radius: 0px;
 	/*background-color:#209653;
 	/*border-radius:.5em;*/
 	height:26px;
 	color:#209653;
-	border-color:black;*/
-	font-size:20px;
+	border-color:black;
+	/*font-size:20px;*/
 	text-decoration:none;
 	padding:.5em .95em;
 	/*border:solid 1px black;*/
